[tool.poetry]
name = "bloxlink-http"
version = "0.1.0"
description = "An http interactions worker for bloxlink"
authors = ["Bloxlink <admin@blox.link>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
hikari = { version = "2.0.0.dev118", extras = ["server", "speedups"] }
hikari-yuyo = { version = "1.14.2", extras = ["asgi"] }
motor = "2.3"
hiredis = "^2.2.3"
redis = ">=4.2.0"
requests = "2.31.0"
dnspython = "2.2.1"
psutil = "5.9.0"
python-dateutil = "2.8.2"
blacksheep = "1.2.17"
uvicorn = { version = "0.22.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
