[tool.poetry]
name = "bloxlink-http"
version = "0.1.0"
description = "An http interactions worker for Bloxlink"
authors = ["Bloxlink <oss@blox.link>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://blox.link/"
repository = "https://github.com/bloxlink/bloxlink-http"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
hikari = {git = "https://github.com/hikari-py/hikari.git", rev = "refs/pull/1803/merge"}
hikari-yuyo = { version = "1.14.2", extras = ["asgi"] }
motor = "2.3"
hiredis = "^2.2.3"
redis = ">=4.2.0"
requests = "2.31.0"
dnspython = "2.2.1"
psutil = "5.9.0"
python-dateutil = "2.8.2"
blacksheep = "1.2.17"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^3.0.1"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
line_length = 110

[tool.pylint]
max-line-length = 110
disable = ["C0413", "C0103", "C0114", "C0301", "W1203"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
